Moving resume and updating for summer 2019

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,20 +11,44 @@
 
 %---------------------------------------------------------
   \cventry
-    {Sofware Engineer Intern (Full-Stack)} % Job title
+    {Sofware Engineer Intern} % Job title
     {Uber} % Organization
     {San Francisco, CA} % Location
-    {May 2018 - Aug. 2018} % Date(s)
+    {2018 \& 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Worked on the Customer Obsessions Answer Discovery team working on predictive intent for ranking of help articles on help.uber.com.}
-        \item {Designed and implemented a new backend service in \textbf{Go} for ingesting \textbf{Kafka} messages and interacting with \textbf{ML} models.}
-        \item {Worked on frontend serivces in \textbf{NodeJS} to add logging of user interactions.}
-        \item {Built multiple ETL pipelines for training ML models as well as included logging and metrics for services using ELK and Grafana.}
-        \item {Project was used as a proof of concept for a larger initiative and this architecture is now being used for in-app help.}
+        \item {Summer 2019 - \textit{Money Engineering Team}}
+        \begin{itemize}
+          \item {Lead the creation of a new tool used to maintain bank communication templates.}
+          \item {Worked closely with stakeholders to determine requirements and use cases.}
+          \item {Built webapp in \textbf{FusionJS} using \textbf{React} \& \textbf{Redux}.}
+          \item {Held multiple beta test sessions with users to ensure project was meeting their needs.}
+        \end{itemize}
+        \item {Summer 2018 - \textit{Customer Obsessions Team}}
+        \begin{itemize}
+          \item {Worked on predictive intent for ranking of help articles on help.uber.com.}
+          \item {Designed and implemented a new backend service in \textbf{Go} for ingesting \textbf{Kafka} messages and interacting with \textbf{ML} models.}
+          \item {Built multiple ETL pipelines for training ML models as well as included logging and metrics for services using ELK and Grafana.}
+          \item {Project was used as a proof of concept for a larger initiative and this architecture is now being used for in-app help.}
+        \end{itemize}
         %\item {New serivces included logging and metrics using ELK and Grafana. }
       \end{cvitems}
     }
+
+%---------------------------------------------------------
+  \cventry
+    {Freelance Product Consultant} % Job title
+    {Bigserene} % Organization
+    {} % Location
+    {Feb. 2019 - June 2019} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item Worked with seed-stage startup to help define their product offering.
+        \item Ensured product market fit by consulting with potential customers.
+        \item Drafted list of product requirements to satisfy users' needs.
+        \item Created mocks and built initial MVP app in \textbf{ReactJS} and \textbf{NodeJS}.
+      \end{cvitems}
+  }
 
 %---------------------------------------------------------
   \cventry
