--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -39,18 +39,18 @@
   }
 
 %---------------------------------------------------------
-  \cventry
-    {Project Manager \& System Architect} % Role
-    {Barbot} % Project
-    {Boston, MA} % Location
-    {Apr. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item Project manager and system architect for a \textbf{Python} Flask webapp for automated parties. 
-	      \item Built a full stack webapp with \textbf{MySQL} database, \textbf{Bootstrap} front end, and \textbf{Flask} app development. 
-	      \item Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. 
-      \end{cvitems}
-    }
+  % \cventry
+  %   {Project Manager \& System Architect} % Role
+  %   {Barbot} % Project
+  %   {Boston, MA} % Location
+  %   {Apr. 2017} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s)
+  %       \item Project manager and system architect for a \textbf{Python} Flask webapp for automated parties. 
+	%       \item Built a full stack webapp with \textbf{MySQL} database, \textbf{Bootstrap} front end, and \textbf{Flask} app development. 
+	%       \item Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. 
+  %     \end{cvitems}
+  %   }
 
 %---------------------------------------------------------
 \end{cventries}
