--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Sofware Engineer Intern} % Job title
+    {Software Engineer Intern} % Job title
     {Uber} % Organization
     {San Francisco, CA} % Location
     {2018 \& 2019} % Date(s)
@@ -22,7 +22,7 @@
           \item {Lead the creation of a new tool used to maintain bank communication templates.}
           \item {Worked closely with stakeholders to determine requirements and use cases.}
           \item {Built webapp in \textbf{FusionJS} using \textbf{React} \& \textbf{Redux}.}
-          \item {Held multiple beta test sessions with users to ensure project was meeting their needs.}
+          \item {Held test session with users to ensure project was meeting their needs.}
         \end{itemize}
         \item {Summer 2018 - \textit{Customer Obsessions Team}}
         \begin{itemize}
